# TRACTOR-cJSON-experiments

./: .gitignore  AGENTS.md  CRISP_LOG_PARSING.md  NOTES.md  parse_crisp_log.py  sketch.rs
git_init_1/: README.md  SUMMARY.md
no_plan_1/rust/src/: cJSON.rs
no_plan_2/: analysis.md
no_plan_2/rust/src/: cJSON.rs
no_plan_3/: summary.md
no_plan_3/rust/: Cargo.toml  lib.rs
no_plan_3/rust/src/: cJSON.rs
persistent_always_full_1/: README.md  SUMMARY.md  cJSON.c  run.sh
persistent_always_short_1/: README.md  SUMMARY.md  init.sh  run.sh
persistent_always_short_1/rust/src/: cJSON.rs
persistent_rejected_1/: README.md  SUMMARY.md  run.sh
setup/: init.sh  run.sh
setup/tests/: CMakeLists.txt  common.h  misc_tests.c  parse_hex4.c  parse_number.c  parse_with_opts.c
setup/tests/unity/: unity_config.h
with_plan_1/rust/src/: cJSON.rs
with_plan_2/: SAFETY_PLAN.final.md  analysis.md
with_plan_2/edit-3/: agent-log.txt
with_plan_2/edit-3/new/: lib.rs
with_plan_2/edit-3/new/src/: cJSON.rs
with_plan_2/edit-3/old/src/: cJSON.rs
with_plan_2/rust/src/: cJSON.rs
with_plan_3/: summary.md
with_plan_4/: SUMMARY.md  summary.md
with_plan_4/rust/: Cargo.toml
with_plan_4/rust/src/: cJSON.rs
with_plan_4/rust_original/: rust-toolchain.toml
with_plan_4/rust_original/src/: cJSON.rs
with_plan_5/: README.md  SUMMARY.md
with_plan_5/rust/: Cargo.toml
with_plan_5/rust/src/: cJSON.rs
with_plan_6/: README.md  SUMMARY.md
with_plan_6/rust/: Cargo.toml
with_plan_6/rust/src/: cJSON.rs
with_plan_7/: SUMMARY.md
with_plan_7/rust/: Cargo.toml  lib.rs
with_plan_7/rust/src/: cJSON.rs
with_plan_8/: README.md  SUMMARY.md  crisp.toml
with_plan_8/rust/: Cargo.toml
with_plan_8/rust/src/: cJSON.rs
with_tests_1/: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  test.c
with_tests_1/rust/: lib.rs
with_tests_1/rust/src/: cJSON.rs
with_tests_1/tests/: compare_tests.c  parse_object.c  parse_value.c  print_number.c  readme_examples.c
with_tests_2/: README.md  SUMMARY.md  cJSON.h  crisp.toml
with_tests_2/rust/: Cargo.toml  lib.rs
with_tests_2/rust/src/: cJSON.rs
with_tests_2/tests/: minify_tests.c  parse_string.c  print_object.c  print_string.c  print_value.c
with_tests_3/: README.md  SUMMARY.md  test_translated.sh
with_tests_3/rust/: lib.rs
with_tests_3/rust/src/: cJSON.rs
with_tests_3/tests/: cjson_add.c  parse_array.c  parse_examples.c  print_array.c
