[package]
name = "cjson"
authors = [ "C2Rust",]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "cjson"
path = "lib.rs"
crate-type = [ "cdylib",]

[dependencies]
num-bigint = "0.5.1"

[workspace]
members = []
default-members = [ ".",]

[profile.release]
strip = "debuginfo"
