[package]
name = "cjson"
authors = [ "C2Rust",]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "cjson"
path = "lib.rs"
crate-type = [ "cdylib",]

[dependencies]
lexical-core = { version = "1.0.6", default-features = false, features = ["write-floats"] }

[workspace]
members = []
default-members = [ ".",]

[profile.release]
strip = "debuginfo"
